  * bugfix: zero-sized UDP messages are no longer processed
  * bugfix: random data could be appended to message
  * bugfix: reverse lookup reduction logic in imudp do DNS queries too often
- bugfix(testbench): testcase did not properly wait for rsyslod shutdown
  thus some unpredictable behavior and a false negative test result
  could occur. [BACKPORTED from v5]
---------------------------------------------------------------------------
Version 4.5.5  [v4-beta] (rgerhards), 2009-10-21
- added $InputTCPServerNotifyOnConnectionClose config directive
  see doc for details
- bugfix: debug string larger than 1K were improperly displayed. Max size
  is now 32K
- bugfix: invalid storage class selected for some size config parameters.
  This resulted in wrong values. The most prominent victim was the
  directory creation mode, which was set to zero in some cases. For 
  details, see related blog post:
  http://blog.gerhards.net/2009/10/another-note-on-hard-to-find-bugs.html
---------------------------------------------------------------------------
Version 4.5.4  [v4-beta] (rgerhards), 2009-09-29
- bugfix: potential segfault in stream writer on destruction
  Most severely affected omfile. The problem was that some buffers were
  freed before the asynchronous writer thread was shut down. So the
  writer thread accessed invalid data, which may even already be
  overwritten. Symptoms (with omfile) were segfaults, grabled data
  and files with random names placed around the file system (most
  prominently into the root directory). Special thanks to Aaron for
  helping to track this down.
- bugfix: potential race in object loader (obj.c) during use/release
  of object interface
- bugfixes: potential problems in out file zip writer. Problems could
  lead to abort and/or memory leak. The module is now hardened in a very
  conservative way, which is sub-optimal from a performance point of view.
  This should be improved if it has proven reliable in practice.