@@ -3,11 +3,7 @@
 # rgerhards, 2009-06-26
 $IncludeConfig diag-common.conf
 
-$ModLoad ../plugins/imtcp/.libs/imtcp
-$MainMsgQueueTimeoutShutdown 10000
-$MaxOpenFiles 2000
-$InputTCPMaxSessions 1100
-$InputTCPServerRun 13514
+$MainMsgQueueTimeoutShutdown 100000
 
 $MainMsgQueueWorkerThreadMinimumMessages 10
 $MainMsgQueueWorkerThreads 5
