@@ -9,7 +9,10 @@
 echo TEST: threadingmqaq.sh - main/action queue concurrency
 source $srcdir/diag.sh init
 source $srcdir/diag.sh startup threadingmqaq.conf
-source $srcdir/diag.sh tcpflood 127.0.0.1 13514 2 100000
+#source $srcdir/diag.sh tcpflood 127.0.0.1 13514 2 100000
+#source $srcdir/diag.sh shutdown-when-empty # shut down rsyslogd when done processing messages
+source $srcdir/diag.sh injectmsg 0 100000
 source $srcdir/diag.sh shutdown-when-empty # shut down rsyslogd when done processing messages
+source $srcdir/diag.sh wait-shutdown
 source $srcdir/diag.sh seq-check 0 99999
 source $srcdir/diag.sh exit
