@@ -15,6 +15,8 @@ Version 4.5.6  [v4-beta] (rgerhards), 2009-09-??
 - bugfix(testbench): testcase did not properly wait for rsyslod shutdown
   thus some unpredictable behavior and a false negative test result
   could occur. [BACKPORTED from v5]
+- bugfix(testbench): sequence check was not always performed correctly,
+  that could result in tests reporting success when they actually failed
 ---------------------------------------------------------------------------
 Version 4.5.5  [v4-beta] (rgerhards), 2009-10-21
 - added $InputTCPServerNotifyOnConnectionClose config directive
